syntax = "proto3";

package test;

import "optype.proto";

// InvalidRequest did not set the operation type to a valid option
message InvalidRequest {
  option (praefect.op_type).op = UNKNOWN;
}
